tests/fixtures/effect-compiler/errors/EFX2605.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  layout(binding = 666) uniform texture2D t;
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
